feat: added business type for merchant
